--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "pizzaria",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "dev": "npx tailwindcss -i ./css/style.css -o ./css/output.css --watch"
+    "dev": "npx tailwindcss -i ./public/css/style.css -o ./public/css/output.css --watch"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,8 @@
     "tailwindcss": "^3.4.10"
   },
   "dependencies": {
-    "firebase": "^10.13.1"
+    "dotenv": "^16.4.5",
+    "firebase": "^10.13.1",
+    "ngrok": "^5.0.0-beta.2"
   }
 }
